welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
		return true;
                       ^