welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
	if(a==b){
		return true;
	}else{
		if (direm(a,b)){
			return min(a,b);
		}else{
			return max(a,b);
		}
	}
}

def direm(a:Int, b:Int): Boolean = {
	if (irem(a)==irem(b)){
		return true
	}else{
		return false
	}
}




def irem(a:Int):Int = {
	return a%5;
}


def min (a:Int , b:Int): Int = {
	return   (  (a + b - Math.abs(b - a))/2);
}


def max (a:Int , b:Int): Int = {
	return   (  (a + b - Math.abs(b - a))/2);
}
